[package]
name = "splendor_arena"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["splendor", "game", "arena"]
description = "A crate for facilitating Splendor game play between autonomous agents."
repository = "https://github.com/pashneal/splendor_arena"
readme = "README.md"


[dependencies]
cached = "0.48.1"
clap = { version = "4.5.1", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.2"
futures-util = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tungstenite = "0.21.0"
url = "2.5.0"
warp = "0.3.6"
