[package]
name = "splendor_arena"
version = "0.1.16"
edition = "2021"
license = "MIT"
keywords = ["splendor", "game", "arena"]
description = "A crate for facilitating Splendor game play between autonomous agents."
repository = "https://github.com/pashneal/stourney_arena"
readme = "README.md"


[dependencies]
cached = { version = "0.48.1", default-features = false , features=["proc_macro"]}
clap = { version = "4.5.1", features = ["derive", "std"], default-features = false }
derive_more = { version = "0.99.18", default-features = false, features = ["display", "error"] }
env_logger = "0.10.2"
futures-util = "0.3.30"
log = { version = "0.4.20", default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.197", features = ["serde_derive", "derive"], default-features = false }
serde_json = { version = "1.0.114", default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.21.0"
url = { version = "2.5.0", default-features = false }
warp = { version = "0.3.6", default-features = false, features = ["websocket"] }

[dependencies.reqwest]
version = "0.12.7"
optional = true
features = ["blocking", "json"]

[dependencies.lazy_static]
version = "1.4.0"
optional = true

[dependencies.pyo3]
version = "0.20.3"
optional = true
features = ["extension-module"]

[features]
rust_stubs = ["reqwest"]
python_stubs = ["reqwest", "lazy_static", "pyo3"]
pool = []
